--- a/patch/BUILD.gn
+++ b/patch/BUILD.gn
@@ -3462,6 +3462,12 @@ if (!is_ios) {
       "tools/quic/be_quic_define.h",
       "tools/quic/be_quic.h",
       "tools/quic/be_quic.cc",
+      "tools/quic/be_quic_client.h",
+      "tools/quic/be_quic_client.cc",
+      "tools/quic/be_quic_client_manager.h",
+      "tools/quic/be_quic_client_manager.cc",
+      "tools/quic/be_quic_fake_proof_verifier.h",
+      "tools/quic/be_quic_fake_proof_verifier.cc",
     ]
     deps = [
       ":net",
