1.Modify library name to libbequic for FFmpeg link convenience; 2.Modify export convention from __stdcall to __cdecl for getting rid of @ after symbol name; 3.Add gen_a.sh for generate mingw gcc linkable libbequic.a from libbequic.dll; 4.Add be_quic_seek method, but not completely implemented yet, can't seek to a certain position, mostly just return file size; 5.Add timeout parameter to be_quic_read method; 6.Release quic spdy client in it's own thread.

--- a/patch/BUILD.gn
+++ b/patch/BUILD.gn
@@ -3457,7 +3457,7 @@ if (!is_ios) {
       "//third_party/protobuf:protobuf_lite",
     ]
   }
-  shared_library("be_quic") {
+  shared_library("libbequic") {
     sources = [
       "tools/quic/basic_streambuf.hpp",
       "tools/quic/basic_streambuf_fwd.hpp",
