Preparing for block splitting reading.
1.Move data buffer from BeQuicSpdyClient to BeQuicClient;
2.Add block_size, block_consume params to open method, not working yet.

--- a/test/win/BeQuicTest/BeQuicTest.vcxproj
+++ b/test/win/BeQuicTest/BeQuicTest.vcxproj
@@ -125,7 +125,7 @@ copy ..\..\..\..\chromium\src\out\$(ConfigurationName)\libbequic.dll.pdb $(Confi
     <ClCompile>
       <PrecompiledHeader>NotUsing</PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
-      <Optimization>Disabled</Optimization>
+      <Optimization>Custom</Optimization>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <SDLCheck>true</SDLCheck>
