--- a/patch/BUILD.gn
+++ b/patch/BUILD.gn
@@ -3464,6 +3464,8 @@ if (!is_ios) {
       "tools/quic/be_quic_define.h",
       "tools/quic/be_quic.h",
       "tools/quic/be_quic.cc",
+      "tools/quic/be_quic_block.h",
+      "tools/quic/be_quic_block.cc",
       "tools/quic/be_quic_client.h",
       "tools/quic/be_quic_client.cc",
       "tools/quic/be_quic_client_manager.h",
